# qt-device-link

./: CHANGELOG.md  CMakeLists.txt  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
examples/: sample_report_0x21.txt
scripts/: package-macos.sh  package-windows.ps1  release-local.sh  version.sh  windows-installer.iss
src/: appversion.h.in  devicestate.cpp  devicestate.h  main.cpp  mainwindow.cpp  mainwindow.h  protocolcodec.cpp  protocolcodec.h  protocolparser.cpp  protocolparser.h  protocoltypes.h  serialportmanager.cpp  serialportmanager.h
tests/: test_protocol.cpp
